test/error/parsing_files/semi_err07.st
f := 12 : t.
