test/error/parsing_files/semi_err07.err
File "parsing_files/semi_err07.st", line 1, characters 9-10:
1 | f := 12 : t.
            ^
Error: Syntax error.
Hint: Cannot have ':' after "12".
